# fsatctl

./: .gitignore  Cargo.toml  Makefile  README.md  meson.build  meson_options.txt
include/: arg_parser.h  cmds.h  read-sensors.h  service.h
src/: arg_parser.cpp  command_line.rs  lib.rs  main.cpp  main.rs  service.cpp
