[package]
name = "fsatctl"
version = "0.1.0"
edition = "2021"
description = "FlatSat2 command line test suite control CLI"
homepage = "https://github.com/c-porto/fsatctl"
repository = "https://github.com/c-porto/fsatctl.git"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
