[package]
name = "fsatctl"
version = "0.1.0"
edition = "2021"
description = "FlatSat2 command line test suite control"
homepage = "https://github.com/c-porto/fsatctl"
repository = "https://github.com/c-porto/fsatctl.git"
license = "GPL-2.0"

[dependencies]
clap = { version = "=4.0.0", features = ["derive"] }
